syntax = "proto3";
package oauth2;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/piotrostr/oauth2-grpc/proto";

message Credentials {
  string username = 1;
  string password = 2;
}

message Token {
  string access_token = 1;
  google.protobuf.Timestamp expires_at = 2;
}
